{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 221,
  "lineage": "81dc7ebe-4982-8817-db68-e0f48227e354",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:security-group/sg-05270094caba6a55b",
            "description": "Report IQ VPC interface endpoints",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "reportiq-vpce-sg"
                ]
              }
            ],
            "id": "sg-05270094caba6a55b",
            "name": "reportiq-vpce-sg",
            "tags": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-vpce-sg",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc_endpoint",
      "name": "existing_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:vpc-endpoint/vpce-0cf928e522dc9ec51",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cf928e522dc9ec51",
            "ip_address_type": "ipv4",
            "owner_id": "610639371721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-017ab1cfe1259120d",
              "rtb-06fdfafd7178f3e23",
              "rtb-0a9ccc5e601c29663"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-s3-gw",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "spg-infosec-elb-logs-use1",
                "enabled": false,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:loadbalancer/app/reportiq-internal-alb/31fb5132fd283c51",
            "arn_suffix": "app/reportiq-internal-alb/31fb5132fd283c51",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-reportiq-internal-alb-466021085.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:610639371721:loadbalancer/app/reportiq-internal-alb/31fb5132fd283c51",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "reportiq-internal-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06e6164e8751be2eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ccac81dc574f7dee"
              },
              {
                "subnet_id": "subnet-0eb319a33bfde7293"
              }
            ],
            "subnets": [
              "subnet-0ccac81dc574f7dee",
              "subnet-0eb319a33bfde7293"
            ],
            "tags": {
              "Name": "reportiq-internal-alb"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-internal-alb",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "vpc_id": "vpc-0ddfa2c6e06a4bc99",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:listener/app/reportiq-internal-alb/31fb5132fd283c51/a34658dab7147f93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610639371721:listener/app/reportiq-internal-alb/31fb5132fd283c51/a34658dab7147f93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:loadbalancer/app/reportiq-internal-alb/31fb5132fd283c51",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "EDO-CoAnalyst-tool",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:listener/app/reportiq-internal-alb/31fb5132fd283c51/4d3c3be1823b64fc",
            "certificate_arn": "arn:aws:acm:us-east-1:610639371721:certificate/c69d7fdd-81dd-464b-ac95-d7e9f7b263cf",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:targetgroup/reportiq-tg/ef67a022a8d544ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610639371721:listener/app/reportiq-internal-alb/31fb5132fd283c51/4d3c3be1823b64fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:loadbalancer/app/reportiq-internal-alb/31fb5132fd283c51",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "EDO-CoAnalyst-tool",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "tls_private_key.cert",
            "tls_self_signed_cert.cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610639371721:targetgroup/reportiq-tg/ef67a022a8d544ee",
            "arn_suffix": "targetgroup/reportiq-tg/ef67a022a8d544ee",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610639371721:targetgroup/reportiq-tg/ef67a022a8d544ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:610639371721:loadbalancer/app/reportiq-internal-alb/31fb5132fd283c51"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "reportiq-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "EDO-CoAnalyst-tool",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:security-group/sg-06e6164e8751be2eb",
            "description": "Report IQ ALB - internal HTTP/HTTPS",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Forward traffic to ECS tasks",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014957b1b0ad4b0a4"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-06e6164e8751be2eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "HTTP from internal network (redirects to 443)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "HTTPS from internal network",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "reportiq-alb-sg",
            "name_prefix": "",
            "owner_id": "610639371721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reportiq-alb-sg"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-alb-sg",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "browser_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:security-group/sg-080bdb5cf95c21a5c",
            "description": "Report IQ one-off browser worker; no inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to official report sources, AWS APIs, or approved proxy",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-080bdb5cf95c21a5c",
            "ingress": [],
            "name": "reportiq-browser-worker-sg",
            "name_prefix": "",
            "owner_id": "610639371721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reportiq-browser-worker-sg"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-browser-worker-sg",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:security-group/sg-014957b1b0ad4b0a4",
            "description": "Report IQ ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to VPC endpoints (ECR, CloudWatch Logs)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-014957b1b0ad4b0a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App port from ALB only",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e6164e8751be2eb"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "reportiq-tasks-sg",
            "name_prefix": "",
            "owner_id": "610639371721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reportiq-tasks-sg"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-tasks-sg",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_to_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Forward traffic to ECS tasks",
            "from_port": 8080,
            "id": "sgrule-3713232839",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e6164e8751be2eb",
            "security_group_rule_id": "sgr-0bfdc622b391023fd",
            "self": false,
            "source_security_group_id": "sg-014957b1b0ad4b0a4",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:vpc-endpoint/vpce-07851caa171450936",
            "dns_entry": [
              {
                "dns_name": "vpce-07851caa171450936-8mtwtqim.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07851caa171450936-8mtwtqim-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07851caa171450936-8mtwtqim-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06856841QATF3X692KYQ"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z06856912DS3ZJJV1Z43X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07851caa171450936",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-081b4a5ebe26deedf",
              "eni-09b8b1149e7ccf0bc"
            ],
            "owner_id": "610639371721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05270094caba6a55b"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.164.56.100",
                "subnet_id": "subnet-0ccac81dc574f7dee"
              },
              {
                "ipv4": "10.164.56.233",
                "subnet_id": "subnet-0eb319a33bfde7293"
              }
            ],
            "subnet_ids": [
              "subnet-0ccac81dc574f7dee",
              "subnet-0eb319a33bfde7293"
            ],
            "tags": {
              "Name": "reportiq-ecr_api"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-ecr_api",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_new",
            "data.aws_security_group.existing_vpce"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:vpc-endpoint/vpce-0fe5863b2b9b901f9",
            "dns_entry": [
              {
                "dns_name": "vpce-0fe5863b2b9b901f9-fpg5m479.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fe5863b2b9b901f9-fpg5m479-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fe5863b2b9b901f9-fpg5m479-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z067568433FKXT8IJXPCR"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z067568433FKXT8IJXPCR"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0457257129X4ZL3G6KCP"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0457257129X4ZL3G6KCP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fe5863b2b9b901f9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c8b6171c74c501f8",
              "eni-0faabf85746f598a7"
            ],
            "owner_id": "610639371721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05270094caba6a55b"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.164.56.114",
                "subnet_id": "subnet-0ccac81dc574f7dee"
              },
              {
                "ipv4": "10.164.56.253",
                "subnet_id": "subnet-0eb319a33bfde7293"
              }
            ],
            "subnet_ids": [
              "subnet-0ccac81dc574f7dee",
              "subnet-0eb319a33bfde7293"
            ],
            "tags": {
              "Name": "reportiq-ecr_dkr"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-ecr_dkr",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_new",
            "data.aws_security_group.existing_vpce"
          ]
        },
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:vpc-endpoint/vpce-016943d2bbf083467",
            "dns_entry": [
              {
                "dns_name": "vpce-016943d2bbf083467-yx1ved0i.ecs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-016943d2bbf083467-yx1ved0i-us-east-1b.ecs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-016943d2bbf083467-yx1ved0i-us-east-1a.ecs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ecs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02778811P502QUS45Z0F"
              },
              {
                "dns_name": "ecs.us-east-1.api.aws",
                "hosted_zone_id": "Z031496838JDHPTX47RX1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-016943d2bbf083467",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a267ab264670fc97",
              "eni-0b5fb5e760c7004e4"
            ],
            "owner_id": "610639371721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05270094caba6a55b"
            ],
            "service_name": "com.amazonaws.us-east-1.ecs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.164.56.216",
                "subnet_id": "subnet-0eb319a33bfde7293"
              },
              {
                "ipv4": "10.164.56.81",
                "subnet_id": "subnet-0ccac81dc574f7dee"
              }
            ],
            "subnet_ids": [
              "subnet-0ccac81dc574f7dee",
              "subnet-0eb319a33bfde7293"
            ],
            "tags": {
              "Name": "reportiq-ecs"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-ecs",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_new",
            "data.aws_security_group.existing_vpce"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610639371721:vpc-endpoint/vpce-06b17094bfa027965",
            "dns_entry": [
              {
                "dns_name": "vpce-06b17094bfa027965-46636nw5.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b17094bfa027965-46636nw5-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b17094bfa027965-46636nw5-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06756791DSHCEXQJ8TUJ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06751412GIOR2A2T9BIA"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z067567415A69803VXYM"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z070821212670D5R9H0UL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06b17094bfa027965",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01f50f4190cee3c63",
              "eni-0d43cd9bbd8365374"
            ],
            "owner_id": "610639371721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05270094caba6a55b"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.164.56.234",
                "subnet_id": "subnet-0eb319a33bfde7293"
              },
              {
                "ipv4": "10.164.56.73",
                "subnet_id": "subnet-0ccac81dc574f7dee"
              }
            ],
            "subnet_ids": [
              "subnet-0ccac81dc574f7dee",
              "subnet-0eb319a33bfde7293"
            ],
            "tags": {
              "Name": "reportiq-logs"
            },
            "tags_all": {
              "AppID": "ASP0017650",
              "CreatedBy": "Abhay.Lunkad",
              "Environment": "NonProd",
              "Name": "reportiq-logs",
              "Owner": "anuthama.c@spglobal.com",
              "contact": "askdevopscloud@spglobal.com"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ddfa2c6e06a4bc99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_new",
            "data.aws_security_group.existing_vpce"
          ]
        }
      ]
    }
  ]
}